--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "outFile": "build/build.js"
     },
     "include": [
-        "sketch/**"
+        "definitions/*",
+        "sketch/**/*"
     ],
     "exclude": [
         "node_modules",
