--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,13 @@
 {
     "compilerOptions": {
-        "module": "amd",
-        "noImplicitAny": true,
+        "target": "es5",
         "removeComments": true,
         "preserveConstEnums": true,
+        "outFile": "./build/build.js",
+        "sourceRoot": "./sketch/",
+        "rootDir": "./sketch/",
         "sourceMap": true,
-        "outFile": "build/build.js"
-    },
-    "include": [
-        "definitions/*",
-        "sketch/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
-    ]
+        "noImplicitAny": true,
+        "module": "none"
+    }
 }
